# converged

./: .gitignore  .gitmodules  LICENSE  README.md  back-core.Dockerfile  biome.json  bun.lockb  config.json  dag-core.Dockerfile  db.json  dh.ts  front-bootstrap.Dockerfile  index.html  package.json  plan.md  readme.md  test2.ts  tsconfig.json  tsconfig.test.json
adac/dag-core/: context.md  package.json  tsconfig.json  tz.md
adac/dag-nodes/: README.md  package.json
adac/dag-types/: interface.ts
adag/: readme.md
adag/dag-api/: package.json
adag/dag-core/: Dockerfile  MIGRATION.md  package.docker.json  package.json  tsconfig.docker.json  tsconfig.json
adag/dag-nodes/: package.json
adag/dag-providers/: package.json
adag/dag-types/: interface.ts
back/: Dockerfile  bunfig.toml  package.json  plugins-config.json  readme.md  tsconfig.json
back-core/: package.json
back-core/src/: index.ts  stores.ts
back/back-core/: Dockerfile  package.json  readme.md  tsconfig.json
back/back-services/: build.sh  package.json
back/core/: Dockerfile  biome.json  package.json  readme.md  tsconfig.json
back/microservices/: README.md
back/ms-server/: bunfig.toml  package.json
back/runtime/: env.ts  index.ts  package.json  plugin.ts  script-resolver.ts  service.ts
back/services/: build.ts  package.json
back/src/: api.ts  build.ts  server.ts  services.ts
back/workflows/: README.md  dag-api.ts  index.ts  package.json  wf-browser-chat-turn.js  wf-dialogue-summary.ts  wf-file-analysis.ts  wf-sales-import.ts  wf-sales-review-outreach.ts
builders/: README.md  package.json
builders/src/: build-backend-base.ts  build-backend.ts  build-frontend-base.ts  build-frontend.ts  build-steps.ts  builder.ts  conf.ts  index.ts  tools.ts  types.ts
builders/tgz/: builders-0.1.0.tgz  builders-0.1.1.tgz  builders-0.1.2.tgz  builders-0.1.3.tgz  builders-0.1.4.tgz  builders-0.1.5.tgz  builders-0.1.6.tgz  builders-0.1.7.tgz
cache/: meta.json
cli/: http_site.json  package.json  readme.md
cli/list/: generated.ts
cli/src/: cli.ts  proxy.ts
core/develop/: bun.lockb  package.json
core/reactive/: package.json  package.npm.json
core/renderer/: bun.lockb  package.json  package.npm.json
core/router/: bun.lockb  package.json
core/style/: package.json
dag/: .env  Dockerfile  README.md  base.Dockerfile  package.json
dag/api/: package.json  providers.md
dag/core/: .gitignore  DB.md  Dockerfile  README.md  TODO.md  package.json  short.md  tsconfig.json
dag/nodes/: package.json
dag/src/: node_map.ts
dag/temp/: sqlite.db
dag/types/: confs.ts  interface.ts
deployment/: converged-portal-secrets.example.yaml
deployment/cloud/: converged-portal-cloud-1.0.0.tgz  k3s-chart.k8s.yaml  summary.json
deployment/mono/: converged-portal-mono-1.0.0.tgz  k3s-chart.k8s.yaml  summary.json
develop/: dev.ts  init.ts  server.ts
develop/bootstraps/: convert.ts  example.ts  processor.ts  ts.ts
develop/compile/: html.ts  pack_build.ts
develop/experiments/: dev_serv.ts
develop/html/: entry.ts
develop/services/: build_controller.ts  cache_controller.ts  store.ts  worker_serivice.ts
develop/tools/: compress.ts  debug.ts  dirs.ts  hash.ts  urls.ts
examples/simple/: counter.html  entry.json
front/: README.md  bunfig.toml  index.html  nginx.conf  package.json  react-lib.ts  server.ts  shim.ts  tailwind.config.js  tsconfig.json  vendor.ts
front/bootstrap/: package.json  readme.md  tsconfig.json
front/chadexample/: package.json
front/confs/: Dockerfile  index.html  modules.json
front/core/: output.css  tailwind.config.js  tsconfig.json
front/front-bootstrap/: Dockerfile  package.json  tailwind.config.js  tsconfig.json
front/front-chat-core/: package.json
front/front-core/: FORMS_GUIDE.md  HEADER_PANEL_GUIDE.md  migrate.md  package.json  readme.md  shadcn.json  tsconfig.json
front/front-files-core/: package.json  readme.md
front/front-modules/: package-lock.json  package.json  tsconfig.json
front/landing/: package.json  uno.config.ts
front/microfrontends/: README.md
front/minimal/: README.md  build.ts  consept.md  index.html  package.json  server.ts  tsconfig.json
front/modules/: .gitignore  README.md  package.json
front/reactive/: build-runtime.ts  package.json
front/renderer/: build-runtime.ts  package.json  readme.md
front/router/: package.json
front/spa/: .gitignore  package.json
front/src/: App.tsx  AuthContext.tsx  Panel.tsx  i18n.ts  index.css  main.tsx  routes.config.tsx  types.ts
front/ssr/: package.json  uno.config.ts
front/style/: build-runtime.ts  package.json  package.npm.json
front/widget/: build.ts  global.d.ts  package.json  server.ts  tsconfig.json  worker-inline.plugin.ts
native/: build-converged-images.sh  fujin_client.zig  storage-it.ts
native/wrapers/curaengine/: CMakeLists.txt  README.md  build.zig
native/wrapers/curaengine/cmake/: Findclipper.cmake  Findrapidjson.cmake  Findstb.cmake
native/wrapers/curaengine/include/: curaengine_wrapper.h
native/wrapers/curaengine/src/: curaengine_wrapper.c
native/wrapers/curaengine/tests/: smoke.c
native/wrapers/fluentbit/: CMakeLists.txt  README.md  build.zig  exports.map
native/wrapers/fluentbit/include/: fluentbit_wrapper.h
native/wrapers/fluentbit/src/: fluentbit_wrapper.c
native/wrapers/fluentbit/tests/: smoke.c
native/wrapers/opencamlib/: CMakeLists.txt  README.md  build.zig
native/wrapers/opencamlib/include/: opencamlib_wrapper.h  version_string.hpp
native/wrapers/opencamlib/src/: opencamlib_wrapper.cpp
nrpc/: README.md  package.json  perfomance.js  test.sh
public/: index.html  index.js  style.css  sw.js
src/: index.ts
templates/: entry.js  index.html
test-results/: .last-run.json
tools/: build_controller.ts  db.ts  dir_hash.ts  external_tool.ts  list-only.ts  migrate-manifests.ts  ping-debug.ts  ping-only.ts  ping-twice.ts  scan-functions.ts  store-check.ts  transport-integration.ts  transport-open-test.ts  worker_serivice.ts
types/: access.ts  calls.ts  chats.ts  files.ts  modules.ts  ses.ts  smtp.ts  store.ts  threads.ts
(+3165 files in other folders)
